# ene137_r2d2

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  display_sensor.launch  spawn.launch  spawn_sensor.launch
rviz/: sensor_config.rviz
scripts/: control.py  head_mov.py
urdf/: r2d2.urdf  r2d2_sensor.urdf
